--- a/.github/workflows/check-workflow-runs-on.yaml
+++ b/.github/workflows/check-workflow-runs-on.yaml
@@ -39,7 +39,7 @@ jobs:
       run: |
 
   hello-world-job-2:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
 
     steps:
     - name: Checkout repository
