--- a/.github/workflows/check-workflow-runs-on.yaml
+++ b/.github/workflows/check-workflow-runs-on.yaml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Run Python script
         run: |
-          python3 check-workflow-runs-on.py
+          python3 check-workflow-runs-on-1.py
   
   hello-world-job-1:
     runs-on: ubuntu-latest
